fixed overflow in y axis

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@ body {
   font-family: "Roboto", sans-serif;
   background-color: #f7ecc6;
   color: #333;
+  overflow: hidden;
 }
 
 footer {
